add verbose GC logging JVM options to README